src/test/ui/utf8_idents.stderr
error[E0658]: non-ascii idents are not fully supported. (see issue #55467)
  --> $DIR/utf8_idents.rs:4:5
   |
LL |     'β, //~ ERROR non-ascii idents are not fully supported
   |     ^^
   |
   = help: add #![feature(non_ascii_idents)] to the crate attributes to enable

error[E0658]: non-ascii idents are not fully supported. (see issue #55467)
  --> $DIR/utf8_idents.rs:5:5
   |
LL |     γ  //~ ERROR non-ascii idents are not fully supported
   |     ^
   |
   = help: add #![feature(non_ascii_idents)] to the crate attributes to enable

error[E0658]: non-ascii idents are not fully supported. (see issue #55467)
  --> $DIR/utf8_idents.rs:10:5
   |
LL |     δ: usize //~ ERROR non-ascii idents are not fully supported
   |     ^
   |
   = help: add #![feature(non_ascii_idents)] to the crate attributes to enable

error[E0658]: non-ascii idents are not fully supported. (see issue #55467)
  --> $DIR/utf8_idents.rs:14:9
   |
LL |     let α = 0.00001f64; //~ ERROR non-ascii idents are not fully supported
   |         ^
   |
   = help: add #![feature(non_ascii_idents)] to the crate attributes to enable

warning: type parameter `γ` should have a camel case name
  --> $DIR/utf8_idents.rs:5:5
   |
LL |     γ  //~ ERROR non-ascii idents are not fully supported
   |     ^ help: convert the identifier to camel case: `Γ`
   |
   = note: #[warn(non_camel_case_types)] on by default

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
